--- a/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
@@ -6,6 +6,8 @@
     background-color #FFF
     margin-top s(-300)
     z-index 8
+    @media screen and (max-width: 1200px)
+      margin-top 0
     &__container
       max-width s(861)
       margin: 0 auto
