pro-home responsive

--- a/ecoleinfographie/resources/assets/stylus/components/home/portfolio-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/portfolio-home.styl
@@ -231,11 +231,16 @@
     width 70%
   .home .portfolio-home__intro__title
     font-size s($sz11)
+    text-align: center
 @media screen and (max-width: 1024px)
   .home .project, .home .project__wrapper-top
     width: 100%
   .home .project__category
     display: none
+  .home .portfolio-home__intro__text
+  .home .portfolio-home__intro__link
+    display: block
+    text-align: center
 @media screen and (max-width: 550px)
   .home .project .project__title
     font-size 18px
