--- a/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
@@ -8,6 +8,8 @@
     z-index 8
     @media screen and (max-width: 1200px)
       margin-top 0
+    @media screen and (max-width: 760px)
+      padding s(60) s(20) s(30)
     &__container
       max-width s(861)
       margin: 0 auto
@@ -18,11 +20,21 @@
       color $cBlueTitles
       letter-spacing 1.5px
       text-align: center
+      @media screen and (max-width: 760px)
+        font-size s($sz11)
+        width: 100%
+      @media screen and (max-width: 480px)
+        font-size s($sz4)
     &__text
       @extend .paragraph21
       text-align: center
       width 90%
       margin: 0 auto s(100, $text-L) auto
+      @media screen and (max-width: 760px)
+        margin: 0 auto s(50, $text-L) auto
+      @media screen and (max-width: 480px)
+        width: 100%
+
 
 /************************************\
 		slider-pros
@@ -35,6 +47,8 @@
       min-height s(500)
       margin: 0 auto
       z-index 2
+      @media screen and (max-width: 1024px)
+        min-height 0
     &__bg
       min-height s(511)
       width 67.363530778%
@@ -44,6 +58,8 @@
       right 0%
       background-color $cBackgroundBlueGrey
       min-height 500px
+      @media screen and (max-width: 1024px)
+        min-height 0
     &__article
       position absolute
       top 0
@@ -53,11 +69,23 @@
       height 100%
       min-height 500px
       overflow hidden
+      @media screen and (max-width: 1024px)
+        position relative
+        display: block
+        margin-bottom s(90)
+        min-height 0
+        overflow visible
     &__description
       width 67.363530778%
       float: right
       position: relative
       top s(50)
+      @media screen and (max-width: 1024px)
+        float none
+        width 100%
+        position static
+        top: 0
+        text-align: center
       //overflow: hidden;
       &:after
         content ''
@@ -69,6 +97,8 @@
         height 50px
         z-index 13
         background-color $cWhite
+        @media screen and (max-width: 1024px)
+          display: none
       &:before
         content: "";
         position: absolute;
@@ -80,12 +110,20 @@
         bottom: 0;
         background-color: $cBackgroundBlueGrey
         z-index -1
+        @media screen and (max-width: 1024px)
+          display: none
       //z-index 12
       &__inside
         padding: s(75) s(50) s(80) s(132)
         right: 0;
         transform: translate3d(0,0,0);
-        //background $cBackgroundBlueGrey
+        @media screen and (max-width: 1024px)
+          padding s(40) s(50) s(90)
+          text-align: center
+          background $cBackgroundBlueGrey
+        @media screen and (max-width: 1024px)
+          padding s(40) s(20) s(90)
+
       &__title
         @extend .titleXXL
         letter-spacing 1px
@@ -108,6 +146,17 @@
         right s(30)
         @extend .buttonLeftToRight
         z-index 300
+        @media screen and (max-width: 1024px)
+          position absolute
+          width s(400)
+          left 0
+          right 0
+          margin-left: auto
+          margin-right: auto
+        @media screen and (max-width: 450px)
+          width 240px
+          line-height 1.2em
+
       &__excerpt
         @extend .paragraph18
     &__image
@@ -116,6 +165,8 @@
       top: s(0)
       z-index 250
       overflow: hidden
+      @media screen and (max-width: 1024px)
+        display: none
       &:before
         content: "";
         position: absolute;
@@ -140,6 +191,8 @@
     display: block
   .slideButtons__next
     margin-bottom: s(4)
+  @media screen and (max-width: 1024px)
+    display: none
 
 
 /************************************\
@@ -151,7 +204,8 @@
   left: 8.5%
   margin-bottom: 0
   z-index 600
-
+  @media screen and (max-width: 1024px)
+    display: none
 
 
 /************************************\
@@ -179,10 +233,16 @@
 
 .slider-pros__article--hidden
   visibility hidden
+  @media screen and (max-width: 1024px)
+    visibility visible
   & .slider-pros__description__inside
     opacity 0
     transform translate3D(-100%, 0, 0)
     transition .4s ease all
+    @media screen and (max-width: 1024px)
+      opacity 1
+      transform none
+
 
 
 
@@ -191,17 +251,28 @@
     opacity 0
     transform translate3D(100%, 0, 0)
     transition .4s ease all
+    @media screen and (max-width: 1024px)
+      opacity 1
+      transform none
   & .slider-pros__image img
     transform translate3D(-100%, 0, 0)
-
+    @media screen and (max-width: 1024px)
+      transform none
 
 .slider-pros__article--left
   & .slider-pros__description__inside
     opacity 0
     transform translate3D(-100%, 0, 0)
     transition .4s ease all
+    @media screen and (max-width: 1024px)
+      opacity 1
+      transform none
   & .slider-pros__image img
     transform translate3D(100%, 0, 0)
+    @media screen and (max-width: 1024px)
+      transform none
   & .slider-pros__description__link
     visibility hidden
+    @media screen and (max-width: 1024px)
+      visibility visible
 
