--- a/ecoleinfographie/resources/assets/stylus/components/home/blog-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/blog-home.styl
@@ -41,6 +41,7 @@
         @media screen and (max-width: 376px)
           &__title
             height auto
+        @media screen and (max-width: 32px)
           &__comments
             display: block
             margin-top s(15)
