fix bug css hover realisation

--- a/ecoleinfographie/resources/assets/stylus/components/navigation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/navigation.styl
@@ -161,6 +161,8 @@
       &:focus
         text-decoration underline
 
+.menu__item--fakeBox
+  display: none
 /************************************\
   ANIMATION DU MENU & DECOR
 \************************************/
