--- a/ecoleinfographie/resources/assets/stylus/components/navigation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/navigation.styl
@@ -426,6 +426,8 @@ div .menu__title-responsive
     &__title-responsive--first
       border-top none
       margin-top: 0
+  .menu__item--fakeBox
+    display: block
 
   .subnav
     position static
