--- a/ecoleinfographie/resources/assets/stylus/components/_redirect.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_redirect.styl
@@ -1,6 +1,10 @@
 .redirect
   @extend .containerGridz
   margin-top s(150)
+  @media screen and (max-width 768px)
+    text-align: center
+    margin-top: s(100)
+    padding 0 s(20)
   &__title
     display: block
     @extend .titleXXL
