update responsive redirect

--- a/ecoleinfographie/resources/assets/stylus/components/_redirect.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_redirect.styl
@@ -13,6 +13,8 @@
     letter-spacing 0
     line-height: 1.4
     margin-bottom s(30)
+    @media screen and (max-width 768px)
+      font-size s($sz5)
   &__link
     @extend .linkArrowLarge
     margin-bottom s(15)
