add class to web-training

--- a/ecoleinfographie/resources/assets/stylus/components/web/web_formation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/web/web_formation.styl
@@ -3,6 +3,7 @@
     background-color $cBackgroundGrey
     &:before
       background-color $cBackgroundGrey
+      top s(-60)
   .redirect-container
     background-color $cWhite
   .redirect
