--- a/ecoleinfographie/resources/assets/stylus/components/web/web_home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/web/web_home.styl
@@ -25,8 +25,8 @@
 
 .web-what
   min-height s(950)
-  @media screen and (max-width 767px)
-    min-height auto
+  @media screen and (max-width 768px)
+    min-height 0
     padding-bottom s(150)
   &__wrapper
     &-text
@@ -62,7 +62,7 @@
   margin-bottom s(250)
   baseShawl($cBackgroundBlueGrey, 4.5deg)
   @media screen and (max-width 768px)
-    min-height s(0)
+    min-height 0
     padding s(2) 0 s(100) 0
     margin-bottom s(100)
   &__wrapper-text
@@ -169,7 +169,7 @@
     z-index 0
     bottom s(100)
     @media screen and (max-width 768px)
-      z-index -1
+      z-index 0
   &__overflowh
     position absolute
     top s(29)
@@ -186,6 +186,8 @@
     margin-top s(51)
     @media screen and (max-width 1024px)
       max-width 55%
+      position: relative
+      z-index 1
     @media screen and (max-width 768px)
       max-width 100%
       float none
@@ -231,7 +233,7 @@
 .devbackend
   min-height s(740)
   @media screen and (max-width 768px)
-    min-height auto
+    min-height 0
     padding-bottom s(150)
   &__wrapper-text
     position: relative
