--- a/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
@@ -27,6 +27,8 @@ $paddingSideGlobal = 40
   containerGridz()
   padding 0 40px
   box-sizing content-box
+  @media screen and (max-width 550px)
+    padding 0 20px
 
 // GridzWidth
 containerGridz()
