responsive web formation

--- a/ecoleinfographie/resources/assets/stylus/base/_text.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_text.styl
@@ -4,6 +4,8 @@
 .paragraph21
   font-size s($text-L)
   line-height 1.62em
+  @media screen and (max-width 550px)
+    font-size s(18)
 
 .paragraph18
   font-size s($sz-textSL)
