--- a/ecoleinfographie/resources/assets/stylus/base/_titles.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_titles.styl
@@ -23,6 +23,8 @@
   letter-spacing 1px
   font-weight 700
   color $cBlueTitles
+  @media screen and (max-width 550px)
+    font-size s($sz5)
 
 .titleXXL // 33.2
   font-size s($text-XXL)
@@ -30,6 +32,8 @@
   letter-spacing 0.75px
   font-weight 700
   color $cBlueTitles
+  @media screen and (max-width 550px)
+    font-size s($sz5)
 
 .title4
   font-size s($sz4)
