--- a/ecoleinfographie/resources/assets/stylus/components/_redirect.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_redirect.styl
@@ -15,6 +15,7 @@
     margin-bottom s(30)
     @media screen and (max-width 768px)
       font-size s($sz5)
+      max-width none
   &__link
     @extend .linkArrowLarge
     margin-bottom s(15)
