--- a/ecoleinfographie/resources/assets/stylus/components/home/portfolio-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/portfolio-home.styl
@@ -221,8 +221,6 @@
     width s(989)
     width 100%
     text-align: center
-  .home .project .project__title
-    font-size s($sz5)
   .home .project .project__description
     font-size s($sz7)
 
@@ -250,3 +248,5 @@
     line-height 1.4em
   .home .project__author
     font-size 15px
+  .home .portfolio-home__intro__title
+    font-size s($sz4)
