--- a/ecoleinfographie/resources/assets/stylus/components/news/index_news.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/news/index_news.styl
@@ -8,5 +8,7 @@
   &-container
     @extend .containerGridz
     padding-top s(150)
+    @media screen and (max-width 1024px)
+      padding s(150) s(20) 0
   .blog-pagination
     margin 0 auto
